--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.19",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
