--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "server": "SET \"DEBUG=server:*\"&& nodemon --exec babel-node ./bin/www"
+    "server": "SET \"DEBUG=server:*\"&& nodemon --exec babel-node ./bin/www",
+    "client": "cd .. && cd client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,12 +18,13 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.19",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4",
     "uuidv4": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
-    "@babel/preset-env": "^7.10.3"
+    "@babel/preset-env": "^7.10.3",
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
