--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "server": "SET \"DEBUG=server:*\"&& nodemon --exec babel-node ./bin/www",
-    "client": "cd .. && cd client && npm start",
+    "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
