change path to build folder

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node ./bin/www",
     "server": "SET \"DEBUG=server:*\"&& nodemon --exec babel-node ./bin/www",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install & npm run build"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
